<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="de.fiw.fhws.lecturers.fragment.NewLecturerFragment">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<android.support.design.widget.TextInputLayout
			android:id="@+id/titleInputLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<EditText
				android:id="@+id/title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:hint="@string/title"
				android:inputType="text"/>

		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/firstNameInputLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<EditText
				android:id="@+id/firstName"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:hint="@string/first_name"
				android:inputType="textPersonName"/>

		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/lastNameInputLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<EditText
				android:id="@+id/lastName"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:hint="@string/last_name"
				android:inputType="textPersonName"/>

		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/emailInputLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<EditText
				android:id="@+id/email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:hint="@string/email"
				android:inputType="textEmailAddress"/>

		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/phoneNumberInputLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<EditText
				android:id="@+id/phoneNumber"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:hint="@string/phone_number"
				android:inputType="text"/>

		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/addressInputLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<EditText
				android:id="@+id/address"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:hint="@string/address"
				android:inputType="text"/>

		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/roomInputLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<EditText
				android:id="@+id/room"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:hint="@string/room"
				android:inputType="text"/>

		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/welearnInputLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<EditText
				android:id="@+id/welearn"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:hint="@string/welearn"
				android:inputType="text"/>

		</android.support.design.widget.TextInputLayout>
	</LinearLayout>
</ScrollView>