<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
									xmlns:app="http://schemas.android.com/apk/res-auto"
									android:id="@+id/lecturer_card"
									style="@style/cardView"
									android:layout_margin="5dp"
									app:cardPreventCornerOverlap="false">

	<RelativeLayout
		android:id="@+id/relativeLayout"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<ImageView
			android:id="@+id/profileImg"
			android:layout_height="170dp"
			android:layout_width="wrap_content"
			android:minWidth="50dp"
			android:layout_alignParentTop="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			/>

		<View
			android:id="@+id/border"
			android:background="@color/colorPrimary"
			android:layout_width="4dp"
			android:layout_height="wrap_content"
			android:layout_marginRight="4dp"
			android:layout_marginEnd="4dp"
			android:layout_alignTop="@+id/profileImg"
			android:layout_alignBottom="@+id/profileImg"
			android:layout_toRightOf="@+id/profileImg"
			android:layout_toEndOf="@+id/profileImg"/>

		<TextView
			android:id="@+id/title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/title"
			android:layout_alignParentTop="true"
			android:layout_toRightOf="@+id/border"
			android:layout_toEndOf="@+id/border"/>

		<TextView
			android:id="@+id/name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/name"
			android:layout_toRightOf="@+id/border"
			android:layout_toEndOf="@+id/border"
			android:layout_below="@+id/title"
			android:textSize="18sp"/>

		<TextView
			android:id="@+id/email"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/email"
			android:layout_toRightOf="@+id/border"
			android:layout_toEndOf="@+id/border"
			android:layout_below="@+id/name"
			android:drawableLeft="@drawable/ic_email"
			android:drawableStart="@drawable/ic_email"
			android:drawablePadding="4dp"/>

		<TextView
			android:id="@+id/phone"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/phone_number"
			android:layout_toRightOf="@+id/border"
			android:layout_toEndOf="@+id/border"
			android:layout_below="@+id/email"
			android:drawableLeft="@drawable/ic_phone"
			android:drawableStart="@drawable/ic_phone"
			android:drawablePadding="4dp"/>

		<TextView
			android:id="@+id/address"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/address"
			android:layout_toRightOf="@+id/border"
			android:layout_toEndOf="@+id/border"
			android:layout_below="@+id/phone"
			android:drawableLeft="@drawable/ic_home"
			android:drawableStart="@drawable/ic_home"
			android:drawablePadding="4dp"/>

		<TextView
			android:id="@+id/room"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/room"
			android:layout_toRightOf="@+id/border"
			android:layout_toEndOf="@+id/border"
			android:layout_below="@+id/address"
			android:drawableLeft="@drawable/ic_location"
			android:drawableStart="@drawable/ic_location"
			android:drawablePadding="4dp"/>

		<TextView
			android:id="@+id/welearn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/welearn"
			android:layout_toRightOf="@+id/border"
			android:layout_toEndOf="@+id/border"
			android:layout_below="@+id/room"
			android:drawableLeft="@drawable/ic_open_in_browser"
			android:drawableStart="@drawable/ic_open_in_browser"
			android:drawablePadding="4dp"/>


	</RelativeLayout>

</android.support.v7.widget.CardView>